resolved fdo#62250 absent value cell values are not NaN, set to 0.0

Change-Id: I41459d72adbaa8f6c0c7c22447f6eba5eb8be3e1
(cherry picked from commit fea6f83df8d2183b108695217bc4ff7a93e942c9)
Reviewed-on: https://gerrit.libreoffice.org/10176
Reviewed-by: Kohei Yoshida <libreoffice@kohei.us>
Tested-by: Kohei Yoshida <libreoffice@kohei.us>